--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@ Sticky footer navbar -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
+        <!-- tutaj dodać jeszcze cover z przyciskiem discover, który będzie odsłaniał zawartość strony -->
         <!-- ------------------------ NAVBAR ------------------------ -->
         <header class="navbar-bg container purple-bg darker">
             <div class="container">
-                <header class="d-flex justify-content-between py-3">
-                    <h3 class="mx-2">Rowerownia</h3>
+                <header class="d-flex justify-content-between py-2">
+                    <h3 class="mx-2 text-white">Rowerownia</h3>
                     <ul class="nav">
                         <li class="nav-item">
                             <form class="d-flex flex-row align-items-center" role="search">
@@ -28,17 +32,60 @@ Sticky footer navbar -->
             </div>
         </header>
         <main class="container mx-auto">
-            <img class="container mt-5" src="./assets/bike-bg.jpg" alt="" />
             <div class="container row my-5">
+                <!-- do przekopiowania jak będzie działać js -->
+                <section class="col d-inline-block">
+                    <div class="card text-center border-dark">
+                        <div class="card-header text-bg-dark">
+                            <ul class="nav nav-tabs card-header-tabs">
+                                <li class="nav-item">
+                                    <a class="nav-link summary-tab active" href="#">Przegląd</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link tech-spec-tab" href="#">Dane techniczne</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-body text-start">
+                            <div class="d-inline-block row content">
+                                <section class="summary-card">
+                                    <img class="image col" src="./assets/1.jpg" alt="" />
+                                    <div class="card-body col px-3">
+                                        <h7 class="category lighter">- trekkingowy -</h7>
+                                        <h3 class="card-title my-3">Rower nr 1</h3>
+                                        <p class="card-text">Rower miejski z 3-rzędowymi przerzutkami i nóżką. Komfortowa jazda po mieście.</p>
+                                        <!-- <a href="#" class="choose-btn btn btn-dark">Wybierz</a> -->
+                                    </div>
+                                </section>
+                                <section class="tech-spec-card d-none">
+                                    <div class="card-body col my-0">
+                                        <h5 class="card-title my-3">Rower nr 1</h5>
+                                        <!-- <hr class="line" /> -->
+                                        <p class="card-text py-3 my-0 border-bottom border-warning">Marka: Romet</p>
+                                        <!-- <hr class="line" /> -->
+                                        <p class="card-text py-3 my-0 border-bottom border-warning">Model: SX5230</p>
+                                        <!-- <hr class="line" /> -->
+                                        <p class="card-text py-3 my-0 border-bottom border-warning">Typ: trekkingowy</p>
+                                        <!-- <hr class="line" /> -->
+                                        <p class="card-text py-3 my-0 border-bottom border-warning">Rozmiar ramy: 57 cm</p>
+                                        <!-- <hr class="line" /> -->
+                                        <p class="card-text py-3 my-0 border-bottom border-warning">Waga: 15 kg</p>
+                                    </div>
+                                </section>
+                            </div>
+                            <a href="#" class="choose-btn btn btn-dark">Wybierz</a>
+                        </div>
+                    </div>
+                </section>
                 <section class="col d-inline-block">
                     <div class="card text-center">
                         <div class="card-header">
                             <ul class="nav nav-tabs card-header-tabs">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="true" href="#">Active</a>
+                                    <a class="nav-link active" aria-current="true" href="#">Przegląd</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
+                                    <a class="nav-link" href="#">Dane techniczne</a>
                                 </li>
                             </ul>
                         </div>
@@ -48,7 +95,7 @@ Sticky footer navbar -->
                                 <div class="card-body col">
                                     <h5 class="card-title">Rower nr 1</h5>
                                     <p class="card-text">Rower miejski z 3-rzędowymi przerzutkami i nóżką. Komfortowa jazda po mieście.</p>
-                                    <a href="#" class="btn btn-dark">Wybierz</a>
+                                    <a href="#" class="choose-btn btn btn-dark">Wybierz</a>
                                 </div>
                             </div>
                         </div>
@@ -59,10 +106,10 @@ Sticky footer navbar -->
                         <div class="card-header">
                             <ul class="nav nav-tabs card-header-tabs">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="true" href="#">Active</a>
+                                    <a class="nav-link active" aria-current="true" href="#">Przegląd</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
+                                    <a class="nav-link" href="#">Dane techniczne</a>
                                 </li>
                             </ul>
                         </div>
@@ -72,31 +119,7 @@ Sticky footer navbar -->
                                 <div class="card-body col">
                                     <h5 class="card-title">Rower nr 1</h5>
                                     <p class="card-text">Rower miejski z 3-rzędowymi przerzutkami i nóżką. Komfortowa jazda po mieście.</p>
-                                    <a href="#" class="btn btn-dark">Wybierz</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <section class="col d-inline-block">
-                    <div class="card text-center">
-                        <div class="card-header">
-                            <ul class="nav nav-tabs card-header-tabs">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="true" href="#">Active</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="card-body">
-                            <div class="d-inline-block row">
-                                <img class="image col" src="./assets/logo.png" alt="" />
-                                <div class="card-body col">
-                                    <h5 class="card-title">Rower nr 1</h5>
-                                    <p class="card-text">Rower miejski z 3-rzędowymi przerzutkami i nóżką. Komfortowa jazda po mieście.</p>
-                                    <a href="#" class="btn btn-dark">Wybierz</a>
+                                    <a href="#" class="choose-btn btn btn-dark">Wybierz</a>
                                 </div>
                             </div>
                         </div>
@@ -104,9 +127,9 @@ Sticky footer navbar -->
                 </section>
             </div>
         </main>
-        <footer class="footer mt-auto py-3 fixed-bottom purple-bg darker">
+        <footer class="footer mt-4 py-2 fixed-bottom purple-bg darker">
             <div class="container d-flex justify-content-between">
-                <span class="text-white d-inline-block">Place sticky footer content here.</span>
+                <span class="text-white d-inline-block">Copyright to A.R. WSB@ 2024 </span>
                 <div class="icons d-inline-block">
                     <i class="fa-brands fa-instagram mx-1" style="color: #ffffff"></i>
                     <i class="fa-brands fa-facebook mx-1" style="color: #ffffff"></i>
@@ -116,5 +139,7 @@ Sticky footer navbar -->
         </footer>
         <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/042e9b1656.js" crossorigin="anonymous"></script>
+
+        <script src="./index.js" type="module"></script>
     </body>
 </html>
