--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Sticky footer navbar -->
             </div>
         </header>
         <main class="container mx-auto">
-            <div class="container row my-5">
+            <div class="container row my-5" id="card-container">
                 <!-- do przekopiowania jak będzie działać js -->
                 <section class="col d-inline-block">
                     <div class="card text-center border-dark">
