--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!-- Lista elementów: 
-Sticky footer navbar -->
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -10,50 +7,36 @@ Sticky footer navbar -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
-        <!-- tutaj dodać jeszcze cover z przyciskiem discover, który będzie odsłaniał zawartość strony -->
         <!-- ------------------------ NAVBAR ------------------------ -->
-        <header class="navbar-bg container purple-bg darker">
+        <header class="navbar-properties navbar-bg fixed-top">
             <div class="container">
                 <header class="d-flex justify-content-between py-2">
-                    <h3 class="mx-2 text-white">Rowerownia</h3>
+                    <div>
+                        <img id="logo" class="d-inline-block position-relative" src="./assets/logo.jpg" alt="logo" />
+                        <h3 class="mx-2 d-inline-block position-relative" id="page-title">Rowerownia</h3>
+                    </div>
+
                     <ul class="nav">
                         <li class="nav-item">
                             <form class="d-flex flex-row align-items-center" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Wpisz markę roweru" aria-label="Search" />
-                                <button class="btn btn-outline-dark pink-bg" type="submit">Szukaj</button>
+                                <input class="form-control me-2" id="search-input" type="search" placeholder="Wpisz markę roweru" aria-label="Search" value="" />
+                                <button class="btn btn-light" id="search-btn" type="submit">Szukaj</button>
                             </form>
                         </li>
                     </ul>
                 </header>
             </div>
         </header>
-        <main class="container mx-auto">
+        <section class="container mx-auto">
             <!-- ------------------------ CARDS ELEMENT CONTAINER ------------------------ -->
-            <div class="container row my-5" id="card-container">
-                <div class="row align-items-md-stretch">
-                    <div class="col-md-6">
-                        <div class="h-100 p-5 bg-light border rounded-3">
-                            <h2>Add borders</h2>
-                            <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
-                            <button class="btn btn-outline-secondary" type="button">Example button</button>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="h-100 p-5 bg-light border rounded-3">
-                            <h2>Add borders</h2>
-                            <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
-                            <button class="btn btn-outline-secondary" type="button">Example button</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
-        <footer class="footer mt-4 py-2 fixed-bottom purple-bg darker">
-            <div class="container d-flex justify-content-between">
+            <div class="container row my-5 mx-auto w-100" id="card-container"></div>
+        </section>
+        <footer class="footer mt-4 py-2 fixed-bottom text-bg-dark">
+            <div class="container d-flex justify-content-between w-50">
                 <span class="text-white d-inline-block">Copyright to A.R. WSB@ 2024 </span>
                 <div class="icons d-inline-block">
                     <i class="fa-brands fa-instagram mx-1" style="color: #ffffff"></i>
@@ -62,9 +45,10 @@ Sticky footer navbar -->
                 </div>
             </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/@floating-ui/core@1.6.0"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.6.3"></script>
         <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/042e9b1656.js" crossorigin="anonymous"></script>
-
-        <script src="./main.js" type="module"></script>
+        <script src="./index.js" type="module"></script>
     </body>
 </html>
