--- a/summaryPage.html
+++ b/summaryPage.html
@@ -16,27 +16,25 @@
             <div class="container">
                 <header class="d-flex justify-content-between py-2">
                     <div>
-                        <a href="#"
-                            ><img id="logo" class="d-inline-block position-relative" src="./assets/logo.jpg" alt="logo" />
-                            <h3 class="mx-2 d-inline-block position-relative" id="page-title">Rowerownia</h3></a
-                        >
+                        <img id="logo" class="d-inline-block position-relative" src="./assets/logo.jpg" alt="logo" />
+                        <h3 class="mx-2 d-inline-block position-relative" id="page-title">Rowerownia</h3>
                     </div>
-
-                    <ul class="nav">
-                        <li class="nav-item">
-                            <form class="d-flex flex-row align-items-center" role="search">
-                                <input class="form-control me-2" id="filter-input" type="search" placeholder="Filtruj po marce" aria-label="Search" value="" />
-                                <button class="btn btn-light" id="filter-btn" type="submit">Filtruj</button>
-                            </form>
-                        </li>
-                    </ul>
                 </header>
             </div>
         </header>
         <section class="container mx-auto">
-            <!-- ------------------------ CARDS ELEMENT CONTAINER ------------------------ -->
-            <div class="container row my-5 mx-auto w-100" id="card-container"></div>
+            <!-- ------------------------  CONTAINER ------------------------ -->
+            <div class="container row my-5 mx-auto w-100" id="card-container">
+                <section class="w-75 d-block mx-auto text-center border rounded my-4 bg-light">
+                    <h1 class="fw-bolder my-4">Dziękujemy za dokonanie rezerwacji!</h1>
+                    <h3 class="my-4 d-block mx-auto w-75">Forma płatności: <span class="fw-bolder orange-text">Gotówka</span></h3>
+                    <h3 class="my-4 d-block mx-auto w-75">Kwota do zapłaty: <span class="fw-bolder orange-text">150,00 zł</span></h3>
+                    <h3 class="my-4 d-block mx-auto w-75">Wybrany rower: <span class="fw-bolder orange-text">NAZWA</span></h3>
+                    <img class="image-third-page my-4 d-block mx-auto" src="./assets/1.jpg" alt="chosen bike" />
+                </section>
+            </div>
         </section>
+
         <!-- ------------------------ FOOTER ------------------------ -->
         <footer class="footer mt-4 py-2 fixed-bottom text-bg-dark">
             <div class="container d-flex justify-content-between w-50">
@@ -54,6 +52,6 @@
         <script src="https://cdn.jsdelivr.net/npm/@floating-ui/dom@1.6.3"></script>
         <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/042e9b1656.js" crossorigin="anonymous"></script>
-        <script src="./scripts/index.js" type="module"></script>
+        <script src="./scripts/formPage.js" type="module"></script>
     </body>
 </html>
