--- a/formPage.html
+++ b/formPage.html
@@ -114,7 +114,7 @@
                     </div>
 
                     <div id="submit-div" class="row border-top border-bottom w-75 my-4 py-4 mx-auto">
-                        <h2 class="col d-block w-50">Do zapłaty: <span class="orange-text">150,00 zł</span></h2>
+                        <h2 class="col d-block w-50">Do zapłaty: <span class="orange-text" id="final-price"></span></h2>
                         <button type="submit" id="submit-btn" class="col btn btn-lg btn-dark d-block orange-text">- Zatwierdź -</button>
                     </div>
                 </form>
