--- a/formPage.html
+++ b/formPage.html
@@ -15,10 +15,10 @@
         <header class="navbar-properties navbar-bg fixed-top">
             <div class="container">
                 <header class="d-flex justify-content-between py-2">
-                    <div>
-                        <img id="logo" class="d-inline-block position-relative" src="./assets/logo.jpg" alt="logo" />
-                        <h3 class="mx-2 d-inline-block position-relative" id="page-title">Rowerownia</h3>
-                    </div>
+                    <a href="./index.html"
+                        ><img id="logo" class="d-inline-block position-relative" src="./assets/logo.jpg" alt="logo" />
+                        <h3 class="mx-2 d-inline-block position-relative" id="page-title">Rowerownia</h3></a
+                    >
                 </header>
             </div>
         </header>
