--- a/formPage.html
+++ b/formPage.html
@@ -115,7 +115,7 @@
 
                     <div id="submit-div" class="row border-top border-bottom w-75 my-4 py-4 mx-auto">
                         <h2 class="col d-block w-50">Do zapłaty: <span class="orange-text" id="final-price"></span></h2>
-                        <a href="./summaryPage.html" id="summary-page-btn" class="col btn btn-lg btn-dark d-block orange-text">- Zatwierdź -</a>
+                        <button id="summary-page-btn" class="col btn btn-lg btn-dark d-block"><a href="./summaryPage.html" class="orange-text">- Zatwierdź -</a></button>
                     </div>
                 </form>
             </div>
