--- a/formPage.html
+++ b/formPage.html
@@ -70,7 +70,7 @@
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="przelew" />
-                            <label class="form-check-label" for="flexRadioDefault2" id="flexRadioDefault2Label"> Przelew (dane do przelewy zostaną wysłane na podany adres email) </label>
+                            <label class="form-check-label" for="flexRadioDefault2" id="flexRadioDefault2Label"> Przelew (dane do przelewu zostaną wysłane na podany adres email) </label>
                         </div>
                     </div>
                     <div class="my-3 d-block mx-auto w-75">
